// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component as disabled 1`] = `
<div
  class="Dropdown"
  data-test-id="cf-ui-card-actions"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="Actions"
    class="Button IconButton IconButton--secondary IconButton--disabled IconButton--deprecated Button--muted Button--disabled Button--trimmed"
    data-test-id="cf-ui-icon-button"
    disabled=""
    type="button"
  >
    <span
      class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--secondary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders the component using a multiple dropdown lists 1`] = `
<div
  class="Dropdown"
  data-test-id="cf-ui-card-actions"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="Actions"
    class="Button IconButton IconButton--secondary IconButton--deprecated Button--muted Button--trimmed"
    data-test-id="cf-ui-icon-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--secondary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders the component using a single dropdown list 1`] = `
<div
  class="Dropdown"
  data-test-id="cf-ui-card-actions"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="Actions"
    class="Button IconButton IconButton--secondary IconButton--deprecated Button--muted Button--trimmed"
    data-test-id="cf-ui-icon-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--secondary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="Dropdown my-extra-class"
  data-test-id="cf-ui-card-actions"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="Actions"
    class="Button IconButton IconButton--secondary IconButton--deprecated Button--muted Button--trimmed"
    data-test-id="cf-ui-icon-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--secondary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders the component with published status 1`] = `
<div
  class="Dropdown"
  data-test-id="cf-ui-card-actions"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    aria-label="Actions"
    class="Button IconButton IconButton--secondary IconButton--deprecated Button--muted Button--trimmed"
    data-test-id="cf-ui-icon-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--secondary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </span>
  </button>
</div>
`;
